# Racing3D

./: .gitignore  CMakeLists.txt
Racing3D/: .gitignore  CMakeLists.txt
Racing3D/shaders/: phong.frag
Racing3D/src/: Camera.cpp  Camera.h  Car.cpp  Car.h  Shader.cpp  Shader.h  Track.h  main.cpp
assets/city/: desert city.mtl
assets/karting/: gp.mtl
docs/html/: _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8h.html  _camera_8h.js  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _city_8cpp.html  _city_8cpp__incl.map  _city_8cpp__incl.md5  _city_8h.html  _city_8h__dep__incl.map  _city_8h__dep__incl.md5  _city_8h__incl.map  _city_8h__incl.md5  _city_8h_source.html  _model_8cpp.html  _model_8cpp.js  _model_8cpp__incl.map  _model_8cpp__incl.md5  _model_8h.html  _model_8h.js  _model_8h__dep__incl.map  _model_8h__dep__incl.md5  _model_8h__incl.map  _model_8h__incl.md5  _model_8h_source.html  _profile_manager_8h.html  _profile_manager_8h.js  _profile_manager_8h__dep__incl.map  _profile_manager_8h__dep__incl.md5  _profile_manager_8h__incl.map  _profile_manager_8h__incl.md5  _profile_manager_8h_source.html  _race_car_8cpp.html  _race_car_8cpp__incl.map  _race_car_8cpp__incl.md5  (+938 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_5.js  classes_7.js  files_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  (+20 more)
shaders/: phong.frag  phong.vert  postprocess.frag
src/: Camaro.cpp  Camaro.h  Camera.cpp  Camera.h  Car.cpp  Car.h  City.cpp  City.h  Karting.cpp  Karting.h  MiniMap.cpp  MiniMap.h  Model.cpp  Model.h  ProfileManager.h  RaceCar.cpp  RaceCar.h  Shader.cpp  Shader.h  Track.cpp  Track.h  TrackCollision.cpp  TrackCollision.h  main.cpp
